--- a/_config.yml
+++ b/_config.yml
@@ -16,9 +16,7 @@
 title: The Carbon Shifters 
 email: your-email@example.com
 description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+This is the website of The Carbon Shifters. We are committed to reduce the CO2 level of the atmosphere via biomass gasification. You can find out more info about gasification [here](link.com), [here](link.com), and [here](link.com). We are an informal international organization and [here](link.com) is our organizational structure. If you want to join us, [please click here](link.com)
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: CarbonShifters
