--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@
 # in the templates via {{ site.myvariable }}.
 title: The Carbon Shifters 
 email: your-email@example.com
-description: The Carbon Shifters are committed to reduce the CO2 level of the atmosphere via biomass gasification. You can find out more info about gasification [here](link.com), [here](link.com), and [here](link.com). We are an informal international organization and [here](link.com) is our organizational structure. If you want to join us, [please click here](link.com)
+description: The Carbon Shifters are committed to reduce the CO2 level of the atmosphere via biomass gasification and depositing the char. You can find out more info about gasification under the About tab. We are an informal international organization and [here](https://link.com) is our organizational structure. If you want to join us, [please click here](https://link.com)
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: CarbonShifters
