--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: The Carbon Shifters - Posts
+title: The Carbon Shifters
 email: your-email@example.com
 description: The Carbon Shifters are committed to reduce the CO2 level of the atmosphere via biomass gasification and depositing the char. You can find out more info about gasification under the About tab. 
 baseurl: "" # the subpath of your site, e.g. /blog
