--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@
 # in the templates via {{ site.myvariable }}.
 title: The Carbon Shifters
 email: your-email@example.com
-description: The Carbon Shifters are committed to reduce the CO2 level of the atmosphere via biomass gasification and depositing the char. You can find out more info about gasification under the About tab. 
+description: The Carbon Shifters are committed to reduce the CO2 level of the atmosphere via biomass gasification and depositing the char. We are building a world wide network of cooperation and finance. You can find out more under the About tab. 
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: CarbonShifters
