--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 title: The Carbon Shifters
-email: your-email@example.com
+email: thecarbonshifters@gmail.com
 description: The Carbon Shifters are committed to reduce the CO2 level of the atmosphere via biomass gasification and depositing the char. We are building a world wide network of cooperation and finance. You can find out more under the About tab. 
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
