--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ github_username:
 
 # Build settings
 markdown: kramdown
-theme: jekyll-theme-tactile
+theme: jekyll-theme-minimal
 plugins:
   - jekyll-feed
 
